Version 3.15 - 23 June 2008, by Pascal "Pixel" Rigaux

- fix urpmi wrongly considering epochless conflicts to match any epoch in a
  case when urpmi should upgrade a conflicting package to an actually
  non-conflicting version (cf epochless-conflict-with-promotion urpmi test)
  (Anssi)

Version 3.14 - 23 May 2008, by Pascal "Pixel" Rigaux

- add is_package_installed() in URPM/Resolve.pm
  (to be used in urpmi 5.20)

Version 3.13 - 20 May 2008, by Pascal "Pixel" Rigaux

- do not ignore dropped provide from updated package (mdvbz#40842)

Version 3.12 - 7 March 2008, by Pascal "Pixel" Rigaux

- do allow to promoting a pkg even if it has unsatisfied require (since the
  code will then fix the unsatisfied require). fixes "big transaction" 
  (cf urpmi split-transactions--strict-require.t test_efgh())
- rpm5.org port done (by Per Øyvind Karlsen)

Version 3.11 - 26 February 2008, by Pascal "Pixel" Rigaux

- restore FILENAME_TAG in generated hdlist (to be compatible with older
  distros where ->filename can rely on it) (thanks to Nanar)

Version 3.10 - 26 February 2008, by Pascal "Pixel" Rigaux

- add filesize to synthesis, add ->filesize to get it, and add
  selected_size_filesize() to compute the sum
- allow urpmi to know a package was not selected because a newer version is
  installed (#29838)
- handle new package providing xxx which conflicts with an installed package (#17106)
- fix sort choices changed in perl-URPM 3.08
- allow fixing "using one big transaction" that occurs when using --keep 
  (#30198)
- do not add FILENAME_TAG and FILESIZE_TAG to hdlist anymore,
  deprecate ->header_filename,
  deprecate URPM::Build::parse_rpms_build_headers

Version 3.08 - 25 February 2008, by Pascal "Pixel" Rigaux

- sort choices on virtual package by provided version (#12645)

Version 3.07 - 11 January 2008, by Pascal "Pixel" Rigaux

- add URPM::Package->changelogs, a wrapper around ->changelog_time, ->changelog_name, ->changelog_text