@@ -823,7 +823,7 @@ B<selected>: { id => {
  } }
 
 B<rejected>: { fullname => { 
-     size => int, removed => bool, obsoleted => bool,
+     size => int, removed => bool, obsoleted => bool, installed => bool,
      backtrack => { # those info are only used to display why package is unselected
          promote => [ name ], keep => [ fullname ], 
          unsatisfied => [ id|property ], 
